kubernetes/platform/victoriametrics/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grafana
    gethomepage.dev/description: Monitoring dashboards
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: grafana.png
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.shreck.co.uk
      secretName: grafana-tls
  rules:
    - host: grafana.shreck.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
